fix weird alignment issue when there are few columns (#871)
See feedback doc

Fixes this weird appearance -
https://www.dropbox.com/s/xbh8h8pg631rm8d/Screenshot%202016-08-22%2021.41.21.png?dl=0

--- a/src/resources/postcss/aggregator-page.pcss
+++ b/src/resources/postcss/aggregator-page.pcss
@@ -290,6 +290,8 @@
 	}
 
 	.dataTable {
+		float: left;
+
 		.column-cb,
 		.check-column {
 			input {
